# cgh

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile
.gdb-pretty-printers/: PrettyPrinters.py
resources/: bmw.mtl  cornell_box.mtl  cylinder.mtl  dragon.mtl  testObj.mtl  tree.mtl
src/: AABB.h  BRDF2s.h  BRDFs.h  Camera.h  Color.h  GGXBRDF.h  Material.h  Mesh.h  ObjReader.h  OrthoCamera.h  PointCloud.h  Random.h  Ray.h  Renderer.h  Scene.cpp  Scene.h  Scenes.h  Triangle.h  Vecf.h  Vector.cpp  Vector.h  config.h  cuda.cu  cuda.h  main.cpp  main.py  main_pc.cpp  test.cu  test.h  typedefs.h  utils.h
src/python/: average.py  calibrate.py  compare.py  propagate.py
